# sqlalchemy-lite

./: Makefile  README.md  pyproject.toml
src/sqlalchemy_lite/: __init__.py  engine.py  ext.py  proxy.py  types.py  utils.py
tests/: test_core.py  test_pagination.py
