[project]
name = "sqlalchemy-lite"
version = "0.1.0"
description = "A future-proof, greenlet-free adapter for SQLAlchemy 2.0 and databases."
keywords = [
    "sqlalchemy",
    "asyncio",
    "pydantic",
    "databases",
    "sqlite",
    "mysql",
    "postgresql",
    "embedded",
    "arm",
    "lite"
]
readme = "README.md"
authors = [
    { name = "gnakw", email = "gnakw@outlook.com" }
]
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "databases>=0.9.0",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.46",
]

[project.optional-dependencies]
sqlite = ["aiosqlite"]
mysql = ["aiomysql", "pymysql"]
postgres = ["asyncpg", "psycopg2-binary"]

[project.urls]
"Homepage" = "https://github.com/gnakw/sqlalchemy-lite"
"Documentation" = "https://github.com/gnakw/sqlalchemy-lite#readme"
"Repository" = "https://github.com/gnakw/sqlalchemy-lite.git"
"Bug Tracker" = "https://github.com/gnakw/sqlalchemy-lite/issues"
"Changelog" = "https://github.com/gnakw/sqlalchemy-lite/releases"

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.0",
]

[tool.ruff.lint]
select = ["I", "E", "F"]